<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RockPaperScissorsActivity"
    tools:showIn="@layout/activity_rock_paper_scissors">

    <ImageButton
        android:id="@+id/btnRock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#009688"
        android:scaleType="fitCenter"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <ImageButton
        android:id="@+id/btnPaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#009688"
        android:scaleType="fitCenter"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toStartOf="@+id/btnScissors"
        app:layout_constraintStart_toEndOf="@+id/btnRock"
        app:layout_constraintWidth_percent="0.33" />

    <ImageButton
        android:id="@+id/btnScissors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#009688"
        android:scaleType="fitCenter"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvStatisticsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatisticsInfo" />

    <include
        android:id="@+id/gameResult"
        layout="@layout/game_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics"
        tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>